# turing-bench

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  check-progress.sh  cypher-to-turingdb-cypher.py  env.sh  fetch_reactome_for_neo4j.sh  install.sh  main.cpp  main.py  neo4j-to-memgraph-cypher.sh  pyproject.toml  run.sh
driver/: BenchmarkDriver.cpp  BenchmarkDriver.h
drivers/: abstract_driver.py  neo4j_driver.py  turingdb_driver.py
neo4j/: README.md  bench.py  requirements.txt  setup.sh
report_summary/: BENCHMARK_REPORT_TEMPLATE.md  generate_benchmark_report.py  generate_report.py  parse_benchmark_report.py  parse_raw_benchmark.py  poledb_benchmark_report.txt
results/: benchmark_report.md  benchmark_report_reactome_2026-02-26_14-11-06.md  benchmark_report_reactome_2026-02-27_04-54-46.md  benchmark_report_reactome_2026-02-28_04-47-26.md  benchmark_report_reactome_2026-03-01_05-00-15.md  benchmark_report_reactome_2026-03-02_04-55-50.md  benchmark_report_reactome_2026-03-03_04-55-45.md  benchmark_report_reactome_2026-03-04_04-53-40.md  benchmark_report_reactome_2026-03-05_04-54-32.md  benchmark_report_reactome_2026-03-06_04-54-34.md
scripts/: check-progress.sh  cypher-to-turingdb-cypher.py  download-datasets.sh  import-dataset.sh  manage_servers.py  neo4j-to-memgraph-cypher.sh  switch-dataset.sh  switch-neo4j-dataset.sh  upload-datasets.sh
servers/: close_tmux_session.sh  open_tmux_session.sh  start_stop_all_servers.sh
servers_python/: manage_servers.py  run.sh  server_manager_simple.py
turingbench/: __main__.py  abstract_driver.py  (+5 more)
(+70 files in other folders)
