[project]
name = "turing-bench"
version = "0.1.0"
description = "Graph database benchmarking tool from TuringDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neo4j>=6.1.0",
    "tabulate>=0.9.0",
    "turingdb==1.19.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]

[project.scripts]
turingbench = "turingbench:main"
